# npp-plugin-mendix-datadog-copy-paste-cleanup

./: .gitignore  CMakeLists.txt  Dockerfile  local.settings.bat.example  redeploy.bat
.devcontainer/: devcontainer.json
src/: PluginDefinition.h  main.ccp  main.cpp
